<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Applications Info</string>
    <string name="loading_apps">Loading applications</string>
    <string name="is_system_app">System app</string>
    <string name="uninstall">Uninstall</string>
    <string name="view_in_settings">View in settings</string>
    <string name="permissions">Uses permissions</string>
    <string name="require_no_permission">No permission required</string>
    <string name="activities">Activities</string>
    <string name="launch">Launch</string>
    <string name="unsupported">Unsupported</string>
    <string name="refresh">Refresh</string>
    <string name="no_activities">No activities</string>
    <string name="receivers">Receivers</string>
    <string name="no_receivers">No receivers</string>
    <string name="providers">Providers</string>
    <string name="no_providers">No providers</string>
    <string name="launch_mode">Launch mode</string>
    <string name="taskAffinity">Task affinity</string>
    <string name="installation">Installation</string>
    <string name="update">Update</string>
    <string name="authority">Authority</string>
    <string name="service">Services</string>
    <string name="no_service">No services</string>
    <string name="orientation">Orientation</string>
    <string name="softInput">Soft input mode</string>
    <string name="flags">Flags</string>
    <string name="grant_uri_permission">Grant URI permissions</string>
    <string name="path_permissions">Path permissions</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="patterns_allowed">Patterns allowed</string>
    <string name="declared_premission">Permissions</string>
    <string name="group">Group</string>
    <string name="protection_level">Protection level</string>
    <string name="uses_feature">Uses features</string>
    <string name="gles_ver">Req. Gles ver.</string>
    <string name="no_feature">No features</string>
    <string name="shared_user_id">Shared user id</string>
    <string name="signatures">Signatures</string>
    <string name="no_signatures">No signatures</string>
    <string name="configurations">Configurations</string>
    <string name="no_configurations">No configurations</string>
    <string name="input_features">Input features</string>
    <string name="view_manifest">View Manifest file</string>
    <string name="manifest">Manifest</string>
    <string name="error">Error</string>
    <string name="loading">Loading &#8230;</string> <!-- &#8230; = ... -->
    <string name="name">Name</string>
    <string name="package_string">Package</string>
    <string name="system_user">System/User</string>
    <string name="size">Size</string>
    <string name="netstats_received">Data received</string>
    <string name="netstats_transmitted">Data transmitted</string>
    <string name="netstats_msg">* Data transmitted since last device boot</string>

    <string name="about">About</string>
    <string name="about_message">Developed by Majeur.\n\nSource code: <a>https://github.com/MajeurAndroid/Applications-Info</a></string>

    <string name="size_details">Size details</string>
    <string name="internal">Internal</string>
    <string name="external">External</string>
    <string name="code_size">Code (apk file)</string>
    <string name="data_size">Data</string>
    <string name="cache_size">Cache</string>
    <string name="obb_size">Obb</string>
    <string name="media_size">Media</string>

    <string name="app_not_installed">Application not installed</string>

    <string name="system">System</string>
    <string name="user">User</string>

    <array name="group_titles">
        <item>@string/activities</item>
        <item>@string/service</item>
        <item>@string/receivers</item>
        <item>@string/providers</item>
        <item>@string/permissions</item>
        <item>@string/declared_premission</item>
        <item>@string/uses_feature</item>
        <item>@string/configurations</item>
        <item>@string/signatures</item>
    </array>
	
	<!--
		===== New Strengs =====
	-->
	<string name="action_settings">Settings</string>
	
	<!--===== Filter menu =====-->
    <string name="action_filter">Filter</string>
    <string name="action_filter_all">All</string>
    <string name="action_filter_user">User</string>
    <string name="action_filter_system">System</string>
    <string name="action_filter_updated">Updated</string>
    <string name="action_filter_frozen">Frozen</string>
    <string name="action_filter_running">Running</string>
	
    <!--===== Sort Menu =====-->
    <string name="action_sort">Sort</string>
    <string name="action_sort_name">Name</string>
    <string name="action_sort_package">Package</string>
    <string name="action_sort_system_user">User/System</string>
    <string name="action_sort_size">Size</string>
    <string name="action_sort_installation">Installation</string>
	
	<!--Detail Overflow Menu-->
	<string name="action_freezen">Freeze app</string>
    <string name="action_unfreezen">Unfreeze app</string>
    <string name="action_kill">Kill app</string>
	<string name="dont_root">No Root rights.\n The operation requires Root access</string>
	
	<string name="title_info">Detailed information</string>
	<string name="lib_size">Library</string>
	<string name="is_running">running</string>
	
	<!--===== PREFERENCES =====-->
	<string name="title_activity_settings">Application Settings</string>
	<string name="prefs_category_global">Global Settings</string>

	<string name="prefs_uninstall_system">Uninstall System</string>
	<string name="prefs_uninstall_summary_on">Allow the removal of system applications</string>
	<string name="prefs_uninstall_summary_off">Prevent deletion of system applications</string>

	<!--===== Prefs Theme =====-->
	<string name="prefs_theme_title">Choose Theme</string>
	<string name="prefs_theme">Theme</string>
	<string name="prefs_theme_summary">Theme Application</string>
	<string-array name="prefs_theme_entries">
		<item>Material Light</item>
		<item>Material Dark</item>
	</string-array>
	
	<string-array 
		tools:ignore="MissingTranslation"
		name="prefs_theme_values" 
		translatable="false">
		<item>0</item>
		<item>1</item>
	</string-array>
	<string name="default_theme" translatable="false">0</string>

	<!--===== Preference View =====-->
	<string name="prefs_category_view">View Settings</string>
	<string name="prefs_show_frozen">Show frozen</string>
	<string name="prefs_show_frozen_summary_on">Hide frozen applications</string>
	<string name="prefs_show_frozen_summary_off">Show frozen applications</string>

	<!--===== Preference Sort =====-->
	<string name="prefs_sort_by_title">Choose sorting</string>
	<string name="prefs_sort_by">Sort by</string>
	<string name="prefs_sort_by_summary">Sort the list by default application</string>
	<string-array name="prefs_sort_by_entries">
		<item>Sort by Name</item>
		<item>Sory by Package</item>
		<item>Sort by Size</item>
		<item>Sort by Insaled</item>
		<item>First User/System</item>
		<!--<item>First System</item>-->
	</string-array>
	<string-array 
		tools:ignore="MissingTranslation"
		name="prefs_sort_by_values" 
		translatable="false">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<!--<item>5</item>-->
	</string-array>
	<string name="default_sort_by" translatable="false">0</string>
	
	
</resources>
